# gattai

./: .buildconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md
sprite-pack-cli/: Cargo.toml
sprite-pack-cli/src/: args.rs  main.rs
sprite-pack-core/: Cargo.toml
sprite-pack-core/src/: error.rs  lib.rs
sprite-pack-core/src/image/: color.rs  mod.rs
sprite-pack-core/src/pack/: bounds.rs  mod.rs  node.rs  sprite.rs
sprite-pack-core/src/sheet/: data.rs  mod.rs
sprite-pack-iced/: Cargo.toml
sprite-pack-iced/src/: main.rs
src/: bounds.rs  cli_args.rs  encoder.rs  main.rs  packer.rs  reader.rs  writer.rs
