[package]
name = "sprite-pack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module-name-repetitions = "allow"
