[package]
name = "gattai"
version = "0.1.0"
edition = "2021"
description = "Combine multiple images into a single sprite sheet"
authors = ["Tudor-Cristian Lechințan <lechintantudor02@gmail.com>"]
repository = "https://github.com/LechintanTudor/gattai"
keywords = ["cli", "gamedev", "packer", "sprite", "spritesheet"]
categories = ["command-line-utilities", "game-development", "multimedia::images"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module-name-repetitions = "allow"
