[package]
name = "sprite-pack-core"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "1.0.0-beta.3", features = ["full"] }
image = { version = "0.24", default-features = false, features = ["png"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
